<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/budget1"
            android:textColor="@color/colorTextOrIcon"
            android:textSize="18sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/budget2"
            android:textColor="@color/colorTextOrIcon"
            android:textSize="18sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/budget3"
            android:textColor="@color/colorTextOrIcon"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>