<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fai.wedding.MainActivity"
    android:background="@color/colorPrimaryLight"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/theme"
                android:textSize="18sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/cake"
                android:layout_marginTop="30dp"
                android:textSize="18sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/gallery"
                android:textSize="18sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/budget"
                android:layout_marginTop="30dp"
                android:textSize="18sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/request"
        android:textColor="@color/colorTextOrIcon"/>

</RelativeLayout>
