<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fai.wedding.MainActivity"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/dekor_sunda"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/dekor_sunda"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/details"
                android:textSize="10sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/dekor_sunda"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/dekor_sunda"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/details"
                android:textSize="10sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/dekor_jawa"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/dekor_jawa"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/details"
                android:textSize="10sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/dekor_jawa"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/dekor_jawa"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/details"
                android:textSize="10sp"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
